--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
                     <button class="join-button">Join US</button>
                 </div> 
             </div>
+            <div class="nav-svg">
+                <img src="./assets/svg/8.svg" width="500px" height="">
+            </div>
         </div>
+        
     </div>
     <section class="banner">
         <div class="banner-head">
@@ -34,6 +38,14 @@
             <p style="color:rgb(232, 133, 62); font-family: Alfa Slab One;">APT Coins</p>
         </div>
         <div class="banner-text"><p>The next generation of meme coins!!</p></div>
+        <div class="spiral"><img src="assets/svg/spiral.svg" width="60px"></div>
+        <div class="buyAndJoin">
+            <button class="buy-now"><img src="./assets/svg/buynow.svg" width="187px" height="52px"></button>
+            <button class="join-now" ><img src="./assets/svg/join-us.svg" width="157.89px" height="52px"></button>
+        </div>
+        <div class="banner-svg-1"><img src="./assets/svg/9.svg"></div>
+        <div class="banner-svg-2"><img src="./assets/svg/11.svg"></div>
+        <div class="banner-svg-3"><img src="./assets/svg/10.svg"></div>
     </section>
 </body>
 
