--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 </div>
                 <div class="nav-button">
                     <button class="join-button">Join US</button>
-                </div> 
+                </div>
             </div>
             <div class="nav-svg">
                 <img src="./assets/svg/8.svg" width="500px" height="">
             </div>
         </div>
-        
+
     </div>
     <section class="banner">
         <div class="banner-head">
@@ -37,16 +37,42 @@
             <p> Dance to the Beat of </p>
             <p style="color:rgb(232, 133, 62); font-family: Alfa Slab One;">APT Coins</p>
         </div>
-        <div class="banner-text"><p>The next generation of meme coins!!</p></div>
+        <div class="banner-text">
+            <p>The next generation of meme coins!!</p>
+        </div>
         <div class="spiral"><img src="assets/svg/spiral.svg" width="60px"></div>
         <div class="buyAndJoin">
             <button class="buy-now"><img src="./assets/svg/buynow.svg" width="187px" height="52px"></button>
-            <button class="join-now" ><img src="./assets/svg/join-us.svg" width="157.89px" height="52px"></button>
+            <button class="join-now"><img src="./assets/svg/join-us.svg" width="157.89px" height="52px"></button>
         </div>
         <div class="banner-svg-1"><img src="./assets/svg/9.svg"></div>
         <div class="banner-svg-2"><img src="./assets/svg/11.svg"></div>
         <div class="banner-svg-3"><img src="./assets/svg/10.svg"></div>
     </section>
+
+    <section class="about">
+        <p style="color:rgb(232, 133, 62); font-family: Aldrich, serif; font-size: 20px;">Our Story</p>
+        <div class="about-head">
+            <h4>About APT Coins</h4>
+        </div>
+        <div class="about-text">
+            <p>Grooving out of the world of beats and blockchain, APT Coin</p>
+            <p>was born to bring music, memes, and magic
+                together! 🎵✨</p>
+                <br>
+            <p>We’re not just riding the crypto wave — we’re dancing on it! </p>
+            <p>Backed by an unstoppable community of music
+                lovers, crypto</p>
+            <p>enthusiasts, and dreamers, APT Coin is here to make the</p>
+            <p>web3 world a whole lot more fun. Join
+                the party, vibe with us,</p>
+            <p>and let’s hit the right notes together!</p>
+        </div>
+        <div class="about-svg-1">
+            <img src="./assets/svg/12.svg" >
+        </div>
+    </section>
+    
 </body>
 
 </html>
