--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                         <p>TOKENOMICS</p>
                     </a>
                 </div>
-                <div class="nav-button">
+                <!-- <div class="nav-button">
                     <button class="join-button">Join US</button>
-                </div>
+                </div> -->
             </div>
             <div class="nav-svg">
                 <img src="./assets/svg/8.svg" width="500px" height="">
@@ -33,17 +33,17 @@
     </div>
     <section class="banner">
         <div class="banner-head">
-            <p>Where Music Meets <span style="color:rgb(232, 133, 62); font-family: Alfa Slab One;">Crypto</span> </p>
+            <p>Where Music Meets <span style="color:rgb(225, 104, 119); font-family: Alfa Slab One;">Crypto</span> </p>
             <p> Dance to the Beat of </p>
-            <p style="color:rgb(232, 133, 62); font-family: Alfa Slab One;">APT Coins</p>
+            <p style="color:rgb(225, 104, 119); font-family: Alfa Slab One;">APT Coins</p>
         </div>
         <div class="banner-text">
             <p>The next generation of meme coins!!</p>
         </div>
         <div class="spiral"><img src="assets/svg/spiral.svg" width="60px"></div>
         <div class="buyAndJoin">
-            <button class="buy-now"><img src="./assets/svg/buynow.svg" width="187px" height="52px"></button>
-            <button class="join-now"><img src="./assets/svg/join-us.svg" width="157.89px" height="52px"></button>
+            <button class="buy-now"><img src="./assets/svg/buynow.svg" ></button>
+            <!-- <button class="join-now"><img src="./assets/svg/join-us.svg" width="157.89px" height="52px"></button> -->
         </div>
         <div class="banner-svg-1"><img src="./assets/svg/9.svg"></div>
         <div class="banner-svg-2"><img src="./assets/svg/11.svg"></div>
@@ -51,7 +51,8 @@
     </section>
 
     <section class="about">
-        <p style="color:rgb(232, 133, 62); font-family: Aldrich, serif; font-size: 20px;">Our Story</p>
+        <p style="color:rgb(225, 104, 119); font-family: Aldrich, serif; font-size: 20px; padding-bottom: 15px;">Our
+            Story</p>
         <div class="about-head">
             <h4>About APT Coins</h4>
         </div>
@@ -59,7 +60,7 @@
             <p>Grooving out of the world of beats and blockchain, APT Coin</p>
             <p>was born to bring music, memes, and magic
                 together! 🎵✨</p>
-                <br>
+            <br>
             <p>We’re not just riding the crypto wave — we’re dancing on it! </p>
             <p>Backed by an unstoppable community of music
                 lovers, crypto</p>
@@ -69,10 +70,22 @@
             <p>and let’s hit the right notes together!</p>
         </div>
         <div class="about-svg-1">
-            <img src="./assets/svg/12.svg" >
+            <img src="./assets/svg/bruno-mars.svg">
         </div>
     </section>
-    
+
+
+    <section class="footer">
+        <div class="copyright">
+            <p>APT Coin <svg  stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024"
+                    height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372zm5.6-532.7c53 0 89 33.8 93 83.4.3 4.2 3.8 7.4 8 7.4h56.7c2.6 0 4.7-2.1 4.7-4.7 0-86.7-68.4-147.4-162.7-147.4C407.4 290 344 364.2 344 486.8v52.3C344 660.8 407.4 734 517.3 734c94 0 162.7-58.8 162.7-141.4 0-2.6-2.1-4.7-4.7-4.7h-56.8c-4.2 0-7.6 3.2-8 7.3-4.2 46.1-40.1 77.8-93 77.8-65.3 0-102.1-47.9-102.1-133.6v-52.6c.1-87 37-135.5 102.2-135.5z">
+                    </path>
+                </svg> 2025,All rights reserved.</p>
+        </div>
+    </section>
+
 </body>
 
 </html>
