--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 
@@ -40,7 +40,7 @@
         <div class="banner-text">
             <p>The next generation of meme coins!!</p>
         </div>
-        <div class="spiral"><img src="assets/svg/spiral.svg" width="60px"></div>
+        <div class="spiral"><img src="./assets/svg/spiral.svg" width="60px"></div>
         <div class="buyAndJoin">
             <button class="buy-now"><img src="./assets/svg/buynow.svg" ></button>
             <!-- <button class="join-now"><img src="./assets/svg/join-us.svg" width="157.89px" height="52px"></button> -->
