--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="nav-bar">
                 <div class="logo">APT MEME COIN</div>
                 <div class="nav-links">
-                    <a href="#">
+                    <a href="/pages/about.html">
                         <p>ABOUT</p>
                     </a>
                     <a href="#">
